--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<title></title>
 	<meta charset="utf-8">
 	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="assets/fonts/roboto-webfont.css">
 </head>
 <body>
 	<header>
@@ -24,15 +25,180 @@
 				</div>
 			</nav>	
 		</section>
-		<section>
-			<h2>Bring your Big Data to Life With Soft-Tech</h2>
-			<p>
-				Blue Lance transforms your company’s data into rich visuals for you to collect and organize so you can focus on what matters to you. Stay in the know, spot trends as they happen, and push your business further.
-			</p>
-		</section>
-		<section>
-			
+		<section class="section__container">
+			<div class="div__container">
+				<p class="title__container">Bring your Big Data to Life With Soft-Tech</p>
+				<p class="p__container">Blue Lance transforms your company’s data into rich visuals for you to collect and organize so you can focus on what matters to you. Stay in the know, spot trends as they happen, and push your business further.</p>
+				<form class="form__container">
+					<input class="input__text" type="text" name="email adress" placeholder="Enter your email adress">
+					<input class="input__submit" type="submit" value="Use it free">
+				</form>
+			</div>
 		</section>
 	</header>
+	<main>
+		<section class="principal__section">
+			<div class="div-image__principal">
+				<img src="assets/images/feature-2.jpg">
+			</div>				
+			<div class="div__principal">
+				<p class="title__principal">OUR PRODUCT</p>
+				<p class="paragrafo__principal">Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum. Duis mollis, est non commodo luctus, nisi erat porttitor ligula.</p>
+				<p class="paragrafo__principal">Quisque volutpat mattis eros.</p>
+				<p class="paragrafo__principal">Nullam malesuada erat ut turpis.</p>
+				<input class="input__principal" type="submit" value="Read more">
+			</div>
+		</section>
+		<section class="principal__segunda-section">
+			<div class="segunda-div__principal">
+				<p class="title__principal">PRODUCT DESCRIPTIONS</p>
+				<p class="paragrafo__principal">Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum. Duis mollis, est non commodo luctus, nisi erat porttitor ligula.</p>
+				<p class="paragrafo__principal">Quisque volutpat mattis eros.</p>
+				<p class="paragrafo__principal">Nullam malesuada erat ut turpis.</p>
+				<input class="input__principal" type="submit" value="Read more">
+			</div>
+			<div class="div-image__segunda">
+				<img src="assets/images/feature-1.jpg">
+			</div>
+		</section>
+		<section class="container__services">
+			<div class="div__inicio-services">
+				<p class="title__services">SERVICES WE PROVIDE</p>
+				<p class="paragrafo__services">condimentum. Duis mollis, est non commodo luctus, nisi erat porttitor ligula.</p>
+			</div>
+			<div class="div__image-services">
+				<img class="image__services" src="assets/images/flaticon1.png">
+			</div>
+			<p class="subtitle__services" >BRANDING</p>
+			<p class="sub-paragrafo__services">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh.</p>
+			<div class="div__image-services">
+				<img class="image__services" src="assets/images/flaticon2.png">
+			</div>
+			<p class="subtitle__services">BRANDING</p>
+			<p class="sub-paragrafo__services">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh.</p>
+			<div class="div__image-services">
+				<img class="image__services" src="assets/images/flaticon3.png">
+			</div>
+			<p class="subtitle__services">BRANDING</p>
+			<p class="sub-paragrafo__services">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh.</p>
+			<div class="div__image-services">
+				<img class="image__services" src="assets/images/flaticon4.png">
+			</div>
+			<p class="subtitle__services">BRANDING</p>
+			<p class="sub-paragrafo__services">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh.</p>	
+		</section>
+		<section>
+			<h2>Affordable Services Package</h2>
+			<p>Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum. Duis mollis, est non commodo luctus, nisi erat porttitor ligula.</p>
+			<div>
+				<div>
+					<h3>BASIC</h3>
+					<h3>$30/MO</h3>
+				</div>
+				<p>20 Keyword No time tracking 230 – Man hour Newsletter available</p>
+				<input type="submit" value="PURCHASE">
+			</div>
+			<div>
+				<div>
+					<h3>POPULAR</h3>
+					<h3>$60/MO</h3>
+				</div>
+				<p>20 Keyword No time tracking 230 – Man hour Newsletter available</p>
+				<input type="submit" value="PURCHASE">
+			</div>
+			<div>
+				<div>
+					<h3>PREMIER</h3>
+					<h3>$90/MO</h3>
+				</div>
+				<p>20 Keyword No time tracking 230 – Man hour Newsletter available</p>
+				<input type="submit" value="PURCHASE">
+			</div>
+		</section>
+		<section>
+			<h2>Our Business Analytics Platform</h2>
+			<p>Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum. Duis mollis, est non commodo luctus, nisi erat porttitor ligula.</p>
+			<div>
+				<img src="assets/images/Livro-Icone.svg">
+				<h3>COMMUNITY EDITION</h3>
+				<p>Visually explore your data through a free-form drag-and-drop canvas, a broad range of modern data visualizations, and an easy-to-use report authoring experience.</p>
+			</div>
+			<div>
+				<img src="assets/images/Livro-Icone.svg">
+				<h3>COMMUNITY EDITION</h3>
+				<p>Visually explore your data through a free-form drag-and-drop canvas, a broad range of modern data visualizations, and an easy-to-use report authoring experience.</p>
+			</div>
+			<div>
+				<img src="assets/images/Livro-Icone.svg">
+				<h3>COMMUNITY EDITION</h3>
+				<p>Visually explore your data through a free-form drag-and-drop canvas, a broad range of modern data visualizations, and an easy-to-use report authoring experience.</p>
+			</div>
+			<div>
+				<img src="assets/images/Livro-Icone.svg">
+				<h3>COMMUNITY EDITION</h3>
+				<p>Visually explore your data through a free-form drag-and-drop canvas, a broad range of modern data visualizations, and an easy-to-use report authoring experience.</p>
+			</div>
+			<div>
+				<img src="assets/images/Livro-Icone.svg">
+				<h3>COMMUNITY EDITION</h3>
+				<p>Visually explore your data through a free-form drag-and-drop canvas, a broad range of modern data visualizations, and an easy-to-use report authoring experience.</p>
+			</div>
+			<div>
+				<img src="assets/images/Livro-Icone.svg">
+				<h3>COMMUNITY EDITION</h3>
+				<p>Visually explore your data through a free-form drag-and-drop canvas, a broad range of modern data visualizations, and an easy-to-use report authoring experience.</p>
+			</div>
+			<div>
+				<img src="assets/images/Livro-Icone.svg">
+				<h3>COMMUNITY EDITION</h3>
+				<p>Visually explore your data through a free-form drag-and-drop canvas, a broad range 	of modern data visualizations, and an easy-to-use report authoring experience.</p>
+			</div>
+			<div>
+				<img src="assets/images/Livro-Icone.svg">
+				<h3>COMMUNITY EDITION</h3>
+				<p>Visually explore your data through a free-form drag-and-drop canvas, a broad range of modern data visualizations, and an easy-to-use report authoring experience.</p>
+			</div>
+		</section>
+	</main>
+	<footer>
+		<section>
+			<div>
+				<h2>GET IN TOUCH</h2>
+				<p>Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum. Duis mollis, est non commodo luctus, nisi erat porttitor ligula.</p>
+			</div>
+			<div>
+				<form>
+					<input class="contact-input" type="text" name="name" placeholder="Nome">
+		            <input class="contact-input" type="email" name="_replyto" placeholder="E-mail">
+		            <textarea class="contact-input" name="message" rows="9" required></textarea>
+		            <input class="contact-submit" type="submit" value="Enviar E-mail">
+				</form>
+			</div>
+			<div>
+				<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec odio. Quisque volutpat mattis eros. Nullam malesuada erat ut turpis. Suspendisse urna nibh, viverra non, semper suscipit, posuere a, pede.</p>
+				<p>1600 Pennsylvania Ave NW, Washington, DC 20500, United States of America.</p>
+				<p>T: (202) 456-1111 M: (202) 456-1212</p>
+			</div>	
+		</section>
+		<section>
+			<div>
+				<p>Quick Links</p>
+				<p>POWER BI DESKTOP MOBILE SEE ALL DOWNLOADS POWER BI DESKTOP MOBILE SEE ALL DOWNLOADS</p>
+			</div>
+			<div>
+				<p>Legal</p>
+				<p>PRIVACY & COOKIES TERMS OF USE TRADEMARKS</p>
+			</div>
+			<div>
+				<p>Information</p>
+				<p>SUPPORT DEVELOPERS BLOG NEWSLETTER PYRAMID ANALYTICS</p>
+			</div>
+			<div>
+				<p>Newsletter</p>
+				<p>Insights await in your company’s data. Bring them into focus with BlueLance.</p>
+				<input type="section" value="Use it free">
+			</div>
+		</section>
+	</footer>
 </body>
 </html>
